Changing Contrast issues

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -77,7 +77,6 @@ h1 {
   padding: 16px;
   text-align: center;
   opacity: 0.7;
-  background-color: var(--accent1-color);
   color: #fff;
 }
 
@@ -105,7 +104,7 @@ h2, .team-section h2 {
   left: 0;
   right: 0;
   margin: 0 auto;
-  background-color: rgba(0,0,0,0.6);
+  background-color: #000;
   color: #fff;
   padding: 16px;
   opacity: 0.9;
@@ -113,7 +112,7 @@ h2, .team-section h2 {
 }
 
 .hero article, .info-box {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: #fff;
   border-radius: 10px;
   padding: 1rem;
   max-width: 600px;
@@ -133,8 +132,8 @@ h2, .team-section h2 {
   font-size: 1.1rem;
   font-weight: 400;
   color: rgba(31,140,204,0.85);
-  text-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  background-color: rgba(0,0,0,0.6);
+  text-shadow: 0 1px 2px #000;
+  background-color: #000;
   margin-top: 0.5rem;
 }
 
@@ -198,7 +197,7 @@ section {
   max-width: 800px;
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 6px #000;
 }
 
 section h2 {
@@ -281,7 +280,8 @@ footer p {
 }
 
 .company-info h1 {
-  color: #ffffff;
+  color: #000;
+  background-color: none;
 }
 
 .company-info p {
@@ -310,14 +310,14 @@ footer p {
   height: 450px;
   border: none;
   border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px #000;
 }
 
 .form-box {
   background-color: var(--secondary-color, #f4f4f4);
   padding: 30px;
   border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px #000;
 }
 
 .form-box form {
@@ -359,7 +359,7 @@ footer p {
 }
 
 .form-box legend {
-  padding: 0 10px;
+  padding: 0 10px 0 1px;
 }
 
 .radio-option, .checkbox-option {
@@ -382,7 +382,7 @@ footer p {
 }
 
 .form-box button[type="submit"] {
-  background-color: #c84b31;
+  background-color: #000;
   color: white;
   font-size: 1.1rem;
   font-weight: bold;
@@ -425,7 +425,7 @@ footer p {
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 4px 15px #000;
   transition: transform 0.3s ease;
 }
 
@@ -442,7 +442,7 @@ footer p {
   color: var(--primary-color);
 }
 
-.team-member .role {
+.team-member .role, p.role {
   font-weight: bold;
   color: var(--accent-color);
   margin-bottom: 12px;
